--- a/templates/smartpro/first.html.twig
+++ b/templates/smartpro/first.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
+
+{% block stylesheets %}
+{% endblock %}
+
 {% block body %}
 <h1>Это первый шаблон</h1>
 <a href={{ path('base') }}>Второй</a>
