--- a/public/css/skin.css
+++ b/public/css/skin.css
@@ -1,5 +1,5 @@
 h1 {
-  background-color: #c7dcff;
+  background-color: #deffbe;
   color: #5b7db6;
   font-family: Arial, Helvetica, sans-serif; }
 
