Исправил ошибку доступа к assets в base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/css/skin.css">
+    <link rel="stylesheet" href={{ asset('css/bootstrap.min.css') }}>
+    <link rel="stylesheet" href={{ asset('css/skin.css') }}>
     {% block stylesheets %}{% endblock %}
 
     <title>{% block title %}Symfony:T4{% endblock %}</title>
@@ -19,9 +19,9 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="../public/js/jquery-3.3.1.min.js"></script>
-<script src="../public/js/popper.min.js"></script>
-<script src="../public/js/bootstrap.min.js"></script>
+<script src={{ asset('js/jquery-3.3.1.min.js') }}></script>
+<script src={{ asset('js/popper.min.js') }}></script>
+<script src={{ asset('js/bootstrap.min.js') }}></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
