--- a/assets/scss/skin.scss
+++ b/assets/scss/skin.scss
@@ -1,5 +1,5 @@
 h1 {
   background-color: rgb(222, 255, 190);
-  color: #5b7db6;
+  color: #75b695;
   font-family: Arial, Helvetica, sans-serif;
 }
