--- a/public/css/skin.css
+++ b/public/css/skin.css
@@ -1,6 +1,6 @@
 h1 {
   background-color: #deffbe;
-  color: #5b7db6;
+  color: #75b695;
   font-family: Arial, Helvetica, sans-serif; }
 
 /*# sourceMappingURL=skin.css.map */
